Fix spacing for lists

--- a/addon/components/canvas-block-list/styles.css
+++ b/addon/components/canvas-block-list/styles.css
@@ -1,3 +1,4 @@
 .component {
+  composes: component from 'canvas-editor/components/canvas-block/styles';
   padding: 0;
 }
